--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/SidhaantThakker/rest-api-demo#readme",
   "dependencies": {
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "mongoose": "^5.13.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.12"
   }
